<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" 
    xmlns:tools="http://schemas.android.com/tools"
    
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/background"
    >
<TableLayout 
    
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MainActivity" >

    <TableRow
        android:id="@+id/tableRow"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dip"
        android:layout_marginTop="10dip" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="4dip"
            android:layout_marginTop="10dp"
            android:layout_span="2"
            android:text="@string/item"
            android:textColor="@color/dark_text"
            android:textSize="25sp" />

    </TableRow>
    
    <View
        android:layout_height="1dip"
        android:layout_width="wrap_content"
        android:background="@color/light_blue" />
    
   
    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
        android:layout_marginBottom="10dip"
        android:layout_marginTop="10dip" >
	    
	    <TextView
        android:id="@+id/itemName"
        android:layout_gravity="center"
        android:text="@string/name"
        android:layout_marginLeft="15dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/dark_text" />
	    
	    <EditText
        android:id="@+id/editName"
        android:layout_gravity="center"
        android:layout_marginRight="15dp"
        android:ems="10"
        android:inputType="text"
        android:layout_width="wrap_content"
        android:textColor="@color/dark_text" >

        <requestFocus />
    </EditText>
	    
	</TableRow>
    
    <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
        android:layout_marginBottom="10dip"
        android:layout_marginTop="10dip" >
      
        <TextView
	        android:id="@+id/itemTagId"
	        android:layout_gravity="center"
	        android:layout_marginLeft="15dp"
	        android:text="@string/des"
	        android:textColor="@color/dark_text"
	        android:textAppearance="?android:attr/textAppearanceMedium" />

	     <TextView 
	        android:id="@+id/textTagId"
	        android:layout_gravity="center"
	        android:layout_marginRight="15dp"
	        android:ems="10"
	        android:layout_width="wrap_content"
	        android:textColor="@color/dark_text"/>
	        
    </TableRow>
    
    <TableRow
        android:id="@+id/tableRow4"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
        android:layout_marginBottom="25dip"
        android:layout_marginTop="10dip" >
      
        <TextView
	        android:id="@+id/itemVisibility"
	        android:layout_gravity="center"
	        android:layout_marginLeft="15dp"
	        android:text="@string/vis"
	        android:textColor="@color/dark_text"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
        	
		<RadioGroup 
		    android:id="@+id/radioVisib"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content" >
        
		<RadioButton 
		    android:id="@+id/itemVisibility_private"
		    android:text="@string/rb1"/>    
		    
		<RadioButton 
		    android:id="@+id/itemVisibility_public"
		    android:text="@string/rb2"/>	 
		    
		 </RadioGroup>
    </TableRow>

    <TableRow
        android:id="@+id/tableRow5"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
        android:layout_marginBottom="25dip"
        android:layout_marginTop="10dip" >
      
        <TextView
	        android:id="@+id/itemPhoto"
	        android:layout_gravity="center"
	        android:layout_marginLeft="15dp"
	        android:text="@string/foto"
	        android:textColor="@color/dark_text"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
        
         <ImageView 
             android:id="@+id/editPhoto"
             android:layout_marginRight="90dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
	         
    </TableRow> 
        
    <View
        android:layout_height="1dip"
        android:layout_width="wrap_content"
        android:background="@color/light_blue" />
    
    <TableRow
        android:id="@+id/tableRow7"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
        android:layout_marginBottom="10dip"
        android:layout_marginTop="15dip" >
    
        
        <Button
		android:id="@+id/cancelButton"
		android:layout_gravity="center"
		android:textColor="@color/dark_text"
		android:layout_marginLeft="25dp"
		android:onClick="goToMenu"
	    android:text="@string/cancel" />
	
		<Button
	    android:id="@+id/saveButton"
	    android:layout_gravity="center"
	    android:textColor="@color/dark_text"
	    android:text="@string/save" />
		
	</TableRow>
</TableLayout>

</ScrollView>